--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,16 @@
 {
   "name": "ABPhp",
   "description": "the a simple framework",
-  "type": "framework",
+  "type": "project",
   "license": "Apache-2.0",
-  "authors": "adcbguo(email:adcbguo@qq.com)",
+  "authors": [
+    {
+      "name": "adcbguo",
+      "email": "adcbguo@qq.com"
+    }
+  ],
   "require": {
     "php": ">=7.0.1",
-    "phpunit": ">=6.5.7"
+    "phpunit/phpunit": ">=6.5.7"
   }
 }
