创建一些框架基础文件

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "ABPhp",
+  "name": "AbcPhp",
   "description": "the a simple framework",
   "type": "project",
   "license": "Apache-2.0",
