--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
   ],
   "require": {
     "php": ">=7.0.1",
-    "phpunit/phpunit": ">=6.5.7",
-    "vrana/notorm": "dev-master"
+    "phpunit/phpunit": ">=6.5.7"
   }
 }
