--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   ],
   "require": {
     "php": ">=7.0.1",
-    "phpunit/phpunit": ">=6.5.7"
+    "phpunit/phpunit": ">=6.5.7",
+    "illuminate/database": "^5.6"
   }
 }
